--- a/styles.css
+++ b/styles.css
@@ -305,13 +305,16 @@ header{
 .about-design h3{
   font-family: "LetteraMonoLL";
   font-size: 2.625rem;
-  line-height: 2.5rem;
+  line-height: 2.49375rem;
   font-weight: 400;
 }
 .about-design p{
   margin-bottom: 1rem;
   margin-top: 1rem;
+  line-height: 20.41px ;
   font-family:"FranklinGothicBook";
+  font-size: 14px;
+  font-weight: 400;
 }
 .sign-up-dpn{
   width: 50%;
@@ -340,6 +343,10 @@ header{
  align-items: center;
  margin-bottom: 1rem;
 }
+.login input{
+  font-family:"FranklinGothicBook" ;
+  font-size: 16px;
+}
 .sign-up{
   display: flex;
   align-items: center;
@@ -355,6 +362,11 @@ input{
 }
 *:focus {
   outline: none;
+}
+label{
+  font-size: 14px;
+  font-family: FranklinGothicBook;
+  font-weight: 100;
 }
 
 .footer-1{
@@ -372,11 +384,23 @@ input{
 .copy-right{
   width: 50%;
 }
-.copy-right h3{
+.copy-right h1{
   width: 50%;
+  font-size: 14px;
+  font-family: "LetteraMonoLL";
+  font-weight: 100;
+}
+.details{
+ list-style-type: none;
+ font-family: "LetteraMonoLL";
+ font-weight: 50;
+ font-size: 14px;
 }
 .detailed-nav h3{
   margin-bottom: 4rem;
+  font-family: "LetteraMonoLL";
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .detailed-nav li{
@@ -393,6 +417,7 @@ input{
 .logo-div{
   width: 50%;
   display: flex;
+  background-color: #a3a7a4;
 }
 .footer-logo{
   padding-top: 9rem;
@@ -421,16 +446,20 @@ input{
 .footer-item{
   padding-left: 1.875rem;
   height: 50%;
-  
+  background-color: #e1e4ea;
 }
 .footer-item ul{
   display: flex;
   list-style-type: none;
   flex-wrap: wrap;
   height: 100%;
- justify-content: space-between;
- align-content: center;
- row-gap: 3rem;
+  justify-content: space-between;
+  align-content: center;
+  row-gap: 3rem;
+  font-size: 14px;
+  font-family: "LetteraMonoLL";
+  font-weight: 100;
+  color: #424b54;
 }
 .footer-item li{
   width:14rem;
